crates/neura/neura-qbft-core/test_errors.txt
   Compiling neura-qbft-core v0.1.0 (/home/peastew/src/neura-reth/crates/neura/neura-qbft-core)
error[E0599]: no function or associated item named `from_word` found for struct `FixedBytes<32>` in the current scope
   --> crates/neura/neura-qbft-core/src/statemachine/qbft_round.rs:944:33
    |
944 |         let parent_hash = B256::from_word(sequence_number -1); // Corrected B256 creation
    |                                 ^^^^^^^^^ function or associated item not found in `FixedBytes<32>`
    |
note: if you're trying to build a new `FixedBytes<32>` consider using one of the following associated functions:
      FixedBytes::<N>::new
      FixedBytes::<N>::with_last_byte
      FixedBytes::<N>::repeat_byte
      FixedBytes::<N>::random
      and 4 others
   --> /home/peastew/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/alloy-primitives-1.1.0/src/bits/fixed.rs:389:5
    |
389 |     pub const fn new(bytes: [u8; N]) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
395 |     pub const fn with_last_byte(x: u8) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
405 |     pub const fn repeat_byte(byte: u8) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
422 |     pub fn random() -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^
help: there is an associated function `from_str` with a similar name
    |
944 -         let parent_hash = B256::from_word(sequence_number -1); // Corrected B256 creation
944 +         let parent_hash = B256::from_str(sequence_number -1); // Corrected B256 creation
    |

error[E0599]: no method named `set_proposer_for_round` found for struct `Arc<MockQbftFinalState>` in the current scope
   --> crates/neura/neura-qbft-core/src/statemachine/qbft_round.rs:949:26
    |
949 |         mock_final_state.set_proposer_for_round(round_id, local_address);
    |                          ^^^^^^^^^^^^^^^^^^^^^^
    |
help: there is a method `get_proposer_for_round` with a similar name, but with different arguments
   --> crates/neura/neura-qbft-core/src/types/qbft_final_state.rs:97:5
    |
97  |     fn get_proposer_for_round(&self, round_identifier: &ConsensusRoundIdentifier) -> Result<Address, QbftError>;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0599]: no method named `add_validator` found for struct `Arc<MockQbftFinalState>` in the current scope
   --> crates/neura/neura-qbft-core/src/statemachine/qbft_round.rs:950:26
    |
950 |         mock_final_state.add_validator(local_address);
    |                          ^^^^^^^^^^^^^
    |
help: there is a method `is_validator` with a similar name
    |
950 -         mock_final_state.add_validator(local_address);
950 +         mock_final_state.is_validator(local_address);
    |

For more information about this error, try `rustc --explain E0599`.
error: could not compile `neura-qbft-core` (lib test) due to 3 previous errors
